[package]
name = "rustic-backup"
version = "0.2.1"
description = "Restic wrapper for convenient backups"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bnavetta/rustic"
repository = "https://github.com/bnavetta/rustic.git"
keywords = ["restic", "backups"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "rustic"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
human-panic = "1"
itertools = "0.12"
paw = "1"
serde = { version = "1.0", features = ["derive"] }
# Allow trace in release builds since it's controlled by a flag
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2"
structopt = { version = "0.3", features = ["paw"] }
tabwriter = "1"
tempfile = "3"
toml = "0.8"
